--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+.disabled-button{
+  pointer-events: none;
+  cursor: default;
+  opacity: 0.6;
+}
+
 /* Normalize*/
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
